--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,15 @@
 
 	<name>SaxonXPathUtils</name>
 	<url>http://maven.apache.org</url>
+		<scm>
+		<connection>scm:git:https://github.com/manuelmsperanza/SaxonXPathUtils.git</connection>
+		<developerConnection>scm:git:git@github.com:manuelmsperanza/SaxonXPathUtils.git</developerConnection>     
+		<tag>HEAD</tag>
+	</scm>
+	<issueManagement>
+		<system>GitHub</system>
+		<url>https://github.com/manuelmsperanza/SaxonXPathUtils/issues</url>
+	</issueManagement>
 	<prerequisites>
 		<maven>3.0</maven>
 	</prerequisites>
