--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>me.hoffnungland</groupId>
+	<groupId>com.hoffnungland</groupId>
 	<artifactId>SaxonXPathUtils</artifactId>
-	<version>1.0.15</version>
+	<version>1.0.16</version>
 	<packaging>jar</packaging>
 
 	<name>SaxonXPathUtils</name>
@@ -105,9 +105,9 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>me.hoffnungland</groupId>
+			<groupId>com.hoffnungland</groupId>
 			<artifactId>Log4j</artifactId>
-			<version>1.0.2</version>
+			<version>1.0.3</version>
 		</dependency>
 		<!-- https://maven.oracle.com -->
 		<dependency>
@@ -124,7 +124,7 @@
 		<dependency>
 			<groupId>net.sf.saxon</groupId>
 			<artifactId>Saxon-HE</artifactId>
-			<version>9.9.1-2</version>
+			<version>9.9.1-4</version>
 		</dependency>
 	</dependencies>
 </project>
