--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,11 @@
 					<artifactId>maven-enforcer-plugin</artifactId>
 					<version>3.0.0-M2</version>
 				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+	        		<artifactId>maven-jarsigner-plugin</artifactId>
+	        		<version>3.0.0</version>
+        		</plugin>
 			</plugins>
 		</pluginManagement>
 		<plugins>
@@ -94,6 +99,32 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+        		<artifactId>maven-jarsigner-plugin</artifactId>
+		        <executions>
+		        	<execution>
+		            	<id>sign</id>
+		            	<goals>
+		              		<goal>sign</goal>
+		            	</goals>
+		            	<configuration>
+          					<keystore>${hoffnunglandJksPath}</keystore>
+          					<alias>${hoffnunglandJksEntry}</alias>
+          					<storepass>${hoffnunglandJksPasswd}</storepass>
+		            	</configuration>
+		          	</execution>
+		          	<execution>
+		            	<id>verify</id>
+		            	<goals>
+		              		<goal>verify</goal>
+		            	</goals>
+		            	<configuration>
+		            		<verbose>true</verbose>
+		            		<certs>true</certs>
+		            	</configuration>
+		          	</execution>
+		        </executions>
+      		</plugin>
 		</plugins>
 	</build>
 	<dependencies>
