--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,20 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.hoffnungland</groupId>
-	<artifactId>SaxonXPathUtils</artifactId>
+	<artifactId>saxonxpathutils</artifactId>
 	<version>1.0.23</version>
 	<packaging>jar</packaging>
 
 	<name>SaxonXPathUtils</name>
 	<url>http://maven.apache.org</url>
-		<scm>
+	<distributionManagement>
+		<repository>
+			<id>github</id>
+			<name>GitHub manuelmsperanza Apache Maven Packages</name>
+			<url>https://maven.pkg.github.com/manuelmsperanza/SaxonXPathUtils</url>
+		</repository>
+	</distributionManagement>
+	<scm>
 		<connection>scm:git:https://github.com/manuelmsperanza/SaxonXPathUtils.git</connection>
 		<developerConnection>scm:git:git@github.com:manuelmsperanza/SaxonXPathUtils.git</developerConnection>     
 		<tag>HEAD</tag>
@@ -138,7 +145,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.hoffnungland</groupId>
-			<artifactId>Log4j</artifactId>
+			<artifactId>log4j</artifactId>
 			<version>1.0.9</version>
 		</dependency>
 		<!-- https://maven.oracle.com -->
