--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<url>http://maven.apache.org</url>
 	<distributionManagement>
 		<repository>
-			<id>github</id>
+			<id>manuelmsperanza.github</id>
 			<name>GitHub manuelmsperanza Apache Maven Packages</name>
 			<url>https://maven.pkg.github.com/manuelmsperanza/SaxonXPathUtils</url>
 		</repository>
