[maven-release-plugin] prepare release saxonxpathutils-1.0.28

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>com.hoffnungland</groupId>
 	<artifactId>saxonxpathutils</artifactId>
-	<version>1.0.28-SNAPSHOT</version>
+	<version>1.0.28</version>
 	<packaging>jar</packaging>
 
 	<name>SaxonXPathUtils</name>
@@ -18,7 +18,7 @@
 	<scm>
 		<connection>scm:git:https://github.com/manuelmsperanza/SaxonXPathUtils.git</connection>
 		<developerConnection>scm:git:git@github.com:manuelmsperanza/SaxonXPathUtils.git</developerConnection>     
-		<tag>HEAD</tag>
+		<tag>saxonxpathutils-1.0.28</tag>
 	</scm>
 	<issueManagement>
 		<system>GitHub</system>
