--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,15 @@
 *.class
 *.jar
-
-/target/**/
-/target/
-/logs/
+*.zip
+*.log
+.jazzignore
+.classpath
+.factorypath
+.project
+.settings
+.vscode
+bin
+logs
+target
+.apt_generated
+.apt_generated_tests
