--- a/pom.xml
+++ b/pom.xml
@@ -35,17 +35,9 @@
 				defaults (may be moved to parent pom) -->
 			<plugins>
 				<plugin>
-					<artifactId>maven-clean-plugin</artifactId>
-					<version>3.2.0</version>
-				</plugin>
-				<!-- see http://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
-				<plugin>
-					<artifactId>maven-resources-plugin</artifactId>
-					<version>3.2.0</version>
-				</plugin>
-				<plugin>
-					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.10.1</version>
+					<groupId>org.apache.maven.plugins</groupId>
+			        <artifactId>maven-compiler-plugin</artifactId>
+			        <version>3.11.0</version>
 					<configuration>
 						<encoding>UTF-8</encoding>
 						<source>${java.source.version}</source>
@@ -53,31 +45,23 @@
 					</configuration>
 				</plugin>
 				<plugin>
-					<artifactId>maven-surefire-plugin</artifactId>
-					<version>3.0.0-M6</version>
-				</plugin>
-				<plugin>
-					<artifactId>maven-jar-plugin</artifactId>
-					<version>3.2.2</version>
-				</plugin>
-				<plugin>
-					<artifactId>maven-install-plugin</artifactId>
-					<version>3.0.0-M1</version>
-				</plugin>
-				<plugin>
-					<artifactId>maven-deploy-plugin</artifactId>
-					<version>3.0.0-M2</version>
-				</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-enforcer-plugin</artifactId>
-					<version>3.0.0</version>
-				</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-	        		<artifactId>maven-jarsigner-plugin</artifactId>
-	        		<version>3.0.0</version>
-        		</plugin>
+    				<groupId>org.apache.maven.plugins</groupId>
+    				<artifactId>maven-release-plugin</artifactId>
+    				<version>3.0.0-M7</version>
+    				<configuration>
+      					<releaseProfiles>github</releaseProfiles>
+    				</configuration>
+  				</plugin>
+  				<plugin>
+    				<groupId>org.apache.maven.plugins</groupId>
+    				<artifactId>maven-enforcer-plugin</artifactId>
+    				<version>3.2.1</version>
+  				</plugin>
+  				<plugin>
+    				<groupId>org.apache.maven.plugins</groupId>
+    				<artifactId>maven-jarsigner-plugin</artifactId>
+    				<version>3.0.0</version>
+  				</plugin>
 			</plugins>
 		</pluginManagement>
 		<plugins>
@@ -93,7 +77,7 @@
 						<configuration>
 							<rules>
 								<requireMavenVersion>
-									<version>3.0.5</version>
+									<version>3.2.5</version>
 								</requireMavenVersion>
 								<requireJavaVersion>
 									<version>1.8.0</version>
@@ -136,7 +120,7 @@
 		<dependency>
 			<groupId>com.hoffnungland</groupId>
 			<artifactId>log4j</artifactId>
-			<version>1.0.20</version>
+			<version>1.0.34</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/net.sf.saxon/Saxon-HE -->
 		<dependency>
